# spexus

./: .envrc  .gitignore  .lefthook.yml  Cargo.toml  flake.nix
.cursor/rules/: dafny-docs.mdc  kani-docs.mdc  kani.mdc  rmcp.mdc  spexus.mdc
backends/backends-common/: Cargo.toml
backends/backends-common/src/: util.rs
backends/common/: Cargo.toml
backends/common/src/: util.rs
backends/kani/: Cargo.toml
backends/kani/src/: translate.rs
backends/refinedc/: Cargo.toml
backends/spexus-dafny/: Cargo.toml
backends/spexus-dafny/src/: dafny.pest  lib.rs  parser.rs  translate.rs
backends/spexus-kani/: Cargo.toml
backends/spexus-kani/src/: translate.rs
backends/spexus-refinedc/: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
lang/: Cargo.toml
lang/src/: parser.rs  spexus.pest  syntax.rs
lang/tests/: sample.spexus  test_sample.rs
mcp/: Cargo.toml
mcp/src/: main.rs  server.rs
nix/: apps.nix  buildInputs.nix  crates.nix  format.nix  shells.nix
nix/crates/: default.nix
spexus-cli/: Cargo.toml
spexus-lang/: Cargo.toml
spexus-lang/src/: parser.rs  syntax.rs
spexus-lang/tests/: byhand_from_dfy.spexus  test_byhand_from_dfy.rs  test_sample.rs
spexus-mcp/: Cargo.toml
spexus-mcp/src/: main.rs  server.rs
