[workspace]
resolver = "3"

members = [
    "backends/common",
    "backends/kani",
    "backends/refinedc",
    "lang",
    "cli", 
    "mcp",
]
[workspace.package]
name = "spexus"
version = "0.0.1"
authors = [ "Quinn Dougherty <quinn@beneficialaifoundation.org>" ]
repository = "github.com/Beneficial-AI-Foundation/spexus"
license = "MIT"
