[workspace]
resolver = "3"

members = [
    "backends/backends-common",
    "backends/spexus-kani",
    "backends/spexus-refinedc",
    "spexus-lang",
    "spexus-cli", 
    "spexus-mcp",
]
[workspace.package]
name = "spexus"
version = "0.0.1"
authors = [ "Quinn Dougherty <quinn@beneficialaifoundation.org>" ]
repository = "github.com/Beneficial-AI-Foundation/spexus"
license = "MIT"
