[package]
name = "spexus-cli"
edition = "2024"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
spexus-kani = { path = "./../backends/spexus-kani" }
spexus-refinedc = { path = "./../backends/spexus-refinedc" }
